--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -1,38 +1,33 @@
-.App {
+@import '../../DarkMode.css';
+
+.Home {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.Home-logo {
+  width: 350px;
+  height: 370px;
   pointer-events: none;
+  border-radius: 50%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Home-header {
+  background-color:  var(--bg-body-color);
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color:  var(--text-color);
+  font-family: Arial, Helvetica, sans-serif;
+}
+.Home-header h1 {
+  font-size:12vmin;
+  font-family: 'Brush Script MT', cursive;
 }
 
-.App-link {
-  color: #61dafb;
+.Home-header p {
+  padding-top: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
