--- a/src/Component/Projects/Projects.css
+++ b/src/Component/Projects/Projects.css
@@ -1,30 +1,37 @@
-.Projects{
+.Projects{  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color:var( --bg-body-color);
   min-height: 80vh;
 }
 
+
 .Projects h1 {
   text-align: center;
   font-weight: bold;
-  text-shadow: 10rem;
+  padding: 1rem;
+  font-size: 50px;
   color: var(--text-color);
+
+  text-shadow: 5px 5px 5px var( --bg-hf-color);
 }
 
 .Pages{
   width: 100%;
-  margin-top: 3rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  display: flex;
 }
 
-.repo{
+/* repo */
+
+.repo{ 
   text-align: center;
   margin: 0 auto; 
-  min-width: 50vw;
-  max-width: 50vw;
+  min-width: 60vw;
+  max-width: 60vw;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 var( --bg-hf-color);
   transition: 0.3s;
@@ -32,7 +39,8 @@
   color: var(--text-color);
 }
 
-.repo h4 {
+.repo-header {
+  border-bottom: 3px solid var(--bg-body-color);
   font-size: 25px;
   padding-top: 10px;
   text-shadow: 2px 2px 2px var( --bg-body-color);
@@ -40,10 +48,15 @@
 }
 
 .repo-body {
-  display: flex;
-  flex-direction: column;
   padding: 0.5rem 1rem;
 }
+.repo-languages {
+  color:var(--text-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 .repo-link button {
   margin: 0 auto;
@@ -60,14 +73,13 @@
   color: var( --bg-hf-color);
 }
 
-
 /* pagination */
 .pagination {
- bottom: 0;
+  flex-wrap: wrap;
   margin: auto;
   margin-top: 3rem;
+  padding-bottom: 2rem;
   align-items: center;
-  max-width: 20vw;
   list-style: none;
   outline: none;
   color: var(--text-color);
@@ -79,7 +91,7 @@
   .pagination > li > a{
     border: 1px var(--bg-hf-color); 
     border-radius: 50%;
-    padding: 5px 10px;
+    padding: 10px 17px 10px 17px;
     outline: none;
     cursor: pointer;
   }
