--- a/src/Component/Projects/MultiColorProgressBar.css
+++ b/src/Component/Projects/MultiColorProgressBar.css
@@ -25,15 +25,13 @@
 
 .multicolor-bar .legends .legend {
     display: inline-block;
-    padding: 0.5rem;
     text-align: center;
 }
 
 .multicolor-bar .legends .legend .dot {
-	font-size: 20px;
+	font-size: 15px;
 	text-align: center;
-	margin-bottom: 5px;
-	vertical-align: middle;
+	padding-left: 15px;
 }
 
 .multicolor-bar .legends .legend .label {
