--- a/src/Component/Projects/Projects.css
+++ b/src/Component/Projects/Projects.css
@@ -20,6 +20,14 @@
   text-shadow: 3px 3px 3px var( --bg-hf-color);
 }
 
+
+.loading{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10%;
+}
+
 .Pages{
   width: 100%;
   display: flex;
@@ -63,6 +71,7 @@
 .repo-body {
   padding: 0.5rem 1rem;
 }
+
 .repo-languages {
   color:var(--text-color);
   display: flex;
