--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -1,23 +1,29 @@
 @import '../../DarkMode/DarkMode.css';
 
+@font-face {
+  font-family: "TheHound";
+  src: local("TheHound"),
+    url("../../fonts/TheHound.ttf") format("truetype");
+  font-weight: normal;
+}
+
 .Home {
   text-align: center;
+  background-color:  var(--bg-body-color);
+  min-height: 80vh;
 }
 
 .Home-header {
-  background-color:  var(--bg-body-color);
-  min-height: 80vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   color:  var(--text-color);
-  font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;;
+  font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
 }
+
 .Home-header h1 {
+  margin: 2rem 0 1rem 0;
+  font-family: TheHound;
   color:  var(--link-color);
-  font-size:calc(80px + 3vmin);
-  font-family: 'Brush Script MT', cursive;
+  font-size:calc(60px + 3vmin);
+  text-shadow: 5px 5px 5px var( --bg-hf-color);
 }
 
 .Home-logo {
@@ -26,26 +32,49 @@
   pointer-events: none;
   border-radius: 50%;
 }
-
 .Home-header p {
-  text-align: center;
   padding: 1rem;
   font-size:calc(15px + 2vmin);
 }
 
-.Home-link{
-  padding-bottom: 1rem; 
+/* For Mobile  */
+@media only screen and (max-width:768px)  {
+  .Home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;  
+  }
+}
+
+@media only screen and (min-width:768px)  {
+  .Home{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .Home-header {
+    margin-left: 30vmin;
+  }
+  .Home-link {
+    margin: auto 0;
+  }
 }
 
 /* About */
 
 .About{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding-top: 8rem;
   padding-bottom: 3rem;
   min-height: 80vh;
   background-color:  var(--bg-body-color);
   color:  var(--text-color);
   font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+  cursor: none;
 }
 
 .About-header h1{
