--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -74,7 +74,6 @@
   background-color:  var(--bg-body-color);
   color:  var(--text-color);
   font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-  cursor: none;
 }
 
 .About-header h1{
@@ -85,8 +84,9 @@
 }
 
 .About-body{
+  width: 100%;
   text-align:start;
-  font-size: 25px;
+  font-size: calc(10px + 1vw);
   padding: 0 10% 0 10%;
 }
 
